data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1980.wast
;; 1. **Test Description**: Import a function from another module which returns an i32 value, use `br_if` to conditionally branch based on the returned value. Check if both implementations correctly handle stack expectations after the call.    - **Constraint Checked**: Proper handling of the operand stack when transitioning across module boundaries.    - **Relation to Control Flow**: This tests if the conditional branch can manage the stack correctly after returning from an imported function.

(assert_invalid
  (module
    (import "env" "externalFunc" (func $externalFunc (result i32)))
    (func $conditionalBranch
      (block (result i32)
        (call $externalFunc)
        (br_if 0)
        (i32.const 0)
      )
    )
  )
  "type mismatch"
)